--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>ITMD-361 Internet Technologies and Web Design</h1>
-  <h3>Semester? Year?</h3>
+  <h3>Semester? Year?</h3><p>Reyof</p>
   <p>Student Name and email</p>
   <p>Reyof</p>
   <h2>Professor:</h2>
