--- a/index2.html
+++ b/index2.html
@@ -6,9 +6,7 @@
 </head>
 <body>
   <h1>ITMD-361 Internet Technologies and Web Design</h1>
-  <h3>Semester? Year?</h3><p>Reyof</p>
-  <p>Student Name and email</p>
-  <p>Reyof</p>
+  <h3>Semester? Year?</h3><p>frank</p>
   <h2>Professor:</h2>
   <p>Daniel Krieglstein</p>
   <h2>Lecture Days, Time and Place:</h2>
